initial bootstrapper commit: //boot:coldstart, //boot:clean

--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -9,6 +9,11 @@ load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
 load("//:WORKSPACE.bzl", "obazl_deps")
 obazl_deps()
 
+local_repository(
+    name = "boot",
+    path = ".bootstrap"
+)
+
 # load("//bzl:rules.bzl",
 #      "new_local_pkg_repository")
 
