--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -1,4 +1,4 @@
-workspace(name = "ocaml-dev")
+workspace(name = "ocaml_tools")
 
 ## DO NOT DO THIS: workspace(name = "ocaml")
 ## (the obazl ruleset already defines @ocaml)
@@ -34,29 +34,29 @@ local_repository(
 # Tell Bazel about our toolchains so it can resolve them based on values passed
 # in --platform, --host_platform, and --execution_platforms options.
 
-register_execution_platforms(
+# register_execution_platforms(
 
-    ## these are target platforms, do not register here
-    # "//platforms:sys_vm_vm",
-    # "//platforms:sys_vm_sys",
-    # "//platforms:sys_sys_sys",
-    # "//platforms:sys_sys_vm",
+#     ## these are target platforms, do not register here
+#     # "//platforms:sys_vm_vm",
+#     # "//platforms:sys_vm_sys",
+#     # "//platforms:sys_sys_sys",
+#     # "//platforms:sys_sys_vm",
 
-    ## proper exec platforms
-    # "//platforms:default",
-    "//platforms:boot",
-    "//platforms:vm",
-    "//platforms/build:vm",
-    "//platforms:sys",
-)
+#     ## proper exec platforms
+#     # "//platforms:default",
+#     "//platforms:boot",
+#     "//platforms:vm",
+#     "//platforms/build:vm",
+#     "//platforms:sys",
+# )
 
 # register_toolchains("@ocaml//toolchain/selectors/local:vmvm")
 register_toolchains(
 
-    "//toolchain/selectors/kick:sys_vm_vm",
-    "//toolchain/selectors/kick:vm",
-    "//toolchain/selectors/boot",
-    "//toolchain/selectors/boot:vmsys",
+    # "//toolchain/selectors/kick:sys_vm_vm",
+    # "//toolchain/selectors/kick:vm",
+    # "//toolchain/selectors/boot",
+    # "//toolchain/selectors/boot:vmsys",
     "//toolchain/selectors/boot:default",
     # "//toolchain/selectors:dev",
     # "//toolchain/selectors:vmsys",
